<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:ignore="ExtraText">
    tools:context=".activity.ChiTietActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Thanh Toán"
        android:background="#3DDC84"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        app:cardCornerRadius="4dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:elevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="NotSibling">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/t_ng_ti_n"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:src="@drawable/ic_baseline_attach_money_24"></ImageView>

                <TextView
                    android:id="@+id/txttongtien"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_25_000"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_baseline_smartphone_24"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:id="@+id/txtsodienthoai"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0966735303"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_baseline_mail_24"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:id="@+id/txtmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/examble_gmail_com"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintTop_toBottomOf="@id/cardview"
        android:id="@+id/inputlayout"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtdiachi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_location_on_24"
            android:drawablePadding="5dp"
            android:hint="@string/nh_p_a_ch_giao_h_ng"
            android:textColorHint="@android:color/holo_red_light">

        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btndathang"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/inputlayout"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button"
        android:textColor="@android:color/white"
        android:text="Đặt hàng"
        >

    </androidx.appcompat.widget.AppCompatButton>


</androidx.constraintlayout.widget.ConstraintLayout>